--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.2.1
   smooth_page_indicator: ^1.0.0+2
+  wheel_slider: ^1.0.0
 
 dev_dependencies:
   flutter_test:
